# haiku-runner

./: .gitignore  README.md  west.yml
.github/workflows/: build.yml  docs-vercel.yml
app/: CMakeLists.txt  Kconfig  Kconfig.audio  Kconfig.inputs  prj.conf  sysbuild.conf
app/boards/: nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay
app/child_image/: hci_rpmsg.conf
app/include/: audio_backend.h  audio_frame.h  audio_input.h  audio_pipeline.h  audio_router.h  input_adapters.h  input_aux_jack.h  input_frame_ingress.h  input_registry.h  input_usb_c_uac.h  input_wifi_stream.h  le_audio_sink.h  source_manager.h  source_policy.h
app/src/: app_state.c  main.c
app/src/audio/: audio_backend_i2s.c  audio_backend_stub.c  audio_pipeline_sof_adapter.c  audio_pipeline_zephyr.c  audio_router.c
app/src/ble/: le_audio_events.c  le_audio_sink.c
app/src/input/: input_aux_jack.c  input_frame_ingress.c  input_registry.c  input_usb_c_mock_feeder.c  input_usb_c_uac.c  input_wifi_stream.c  source_manager.c
docs/: architecture.md  build.md  hardware-porting.md  input-model.md  sof-integration.md
docs-site/: README.md  app.config.ts  app.vue  package-lock.json  package.json
docs-site/content/: architecture.md  build.md  hardware-porting.md  index.md  input-model.md  sof-integration.md
docs-site/content/test-hardware/: components.md  guide.md  index.md  layout.md
docs-site/plugins/: vercel-analytics.client.ts
docs/test-hardware/: README.md  components.md  guide.md  layout.md
